force-app/main/default/objects/Membership_Transaction__c/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <formula>Order__r.Account.Account_Id__c</formula>
    <label>Account Id</label>
    <type>Text</type>
</CustomField>