force-app/main/default/objects/Membership_Transaction__c/fields/Check_Number__c.field-meta.xml
<CustomField>
    <fullName>Check_Number__c</fullName>
    <label>Check Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>