force-app/main/default/objects/Membership_Transaction__c/fields/CheckDate__c.field-meta.xml
<CustomField>
    <fullName>CheckDate__c</fullName>
    <description>Records the date on which the check was issued or received</description>
    <label>Check Date</label>
    <type>Date</type>
</CustomField>