force-app/main/default/objects/Membership_Transaction__c/fields/CP_Payment_Category__c.field-meta.xml
<CustomField>
    <fullName>CP_Payment_Category__c</fullName>
    <label>CP Payment Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paid by CP Check</fullName>
            </value>
            <value>
                <fullName>Paid by CP ACH</fullName>
            </value>
            <value>
                <fullName>Paid by CP Contract</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>