force-app/main/default/objects/Membership_Transaction__c/fields/Craft_Commerce_Reference_Id__c.field-meta.xml
<CustomField>
    <fullName>Craft_Commerce_Reference_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Craft_Commerce_Reference_Id</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>