force-app/main/default/objects/Membership_Transaction__c/fields/IsFullyRefunded__c.field-meta.xml
<CustomField>
    <fullName>IsFullyRefunded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the transaction has been fully refunded.</description>
    <label>Fully Refunded</label>
    <type>Checkbox</type>
</CustomField>