force-app/main/default/objects/Membership_Transaction__c/fields/IsPartiallyRefunded__c.field-meta.xml
<CustomField>
    <fullName>IsPartiallyRefunded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the transaction has been partially refunded.</description>
    <label>Partially Refunded</label>
    <type>Checkbox</type>
</CustomField>