force-app/main/default/objects/Membership_Transaction__c/fields/LastGatewayErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>LastGatewayErrorMessage__c</fullName>
    <label>Last Gateway Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>