force-app/main/default/objects/Membership_Transaction__c/fields/Membership_Level__c.field-meta.xml
<CustomField>
    <fullName>Membership_Level__c</fullName>
    <formula>Related_Membership__r.Membership_Type__r.Name</formula>
    <label>Membership Level</label>
    <type>Text</type>
</CustomField>