force-app/main/default/objects/Membership_Transaction__c/fields/Payment_Note__c.field-meta.xml
<CustomField>
    <fullName>Payment_Note__c</fullName>
    <label>Payment Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>