force-app/main/default/objects/Membership_Transaction__c/fields/Refunded_Amount__c.field-meta.xml
<CustomField>
    <fullName>Refunded_Amount__c</fullName>
    <description>Aggregates and shows the total refunded amount related to the membership.</description>
    <label>Refunded Amount</label>
    <summarizedField>Membership_Refund__c.Amount__c</summarizedField>
    <summaryForeignKey>Membership_Refund__c.Membership_Transaction__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>