force-app/main/default/objects/Membership_Transaction__c/fields/TaxDeductionAmount__c.field-meta.xml
<CustomField>
    <fullName>TaxDeductionAmount__c</fullName>
    <description>Captures the amount eligible for tax deduction.</description>
    <label>Tax Deduction Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>