force-app/main/default/objects/Membership_Transaction__c/fields/TransactionCompletionDate__c.field-meta.xml
<CustomField>
    <fullName>TransactionCompletionDate__c</fullName>
    <description>Records the date of the transaction.</description>
    <label>Transaction Completion Date</label>
    <type>Date</type>
</CustomField>