force-app/main/default/objects/Membership_Transaction__c/fields/TransactionDueDate__c.field-meta.xml
<CustomField>
    <fullName>TransactionDueDate__c</fullName>
    <description>Specifies the due date for the transaction.</description>
    <label>Transaction Due Date</label>
    <type>Date</type>
</CustomField>